<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wmpaul.scorecard.activities.RulesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/text_margin"
        android:paddingEnd="@dimen/text_margin"
        android:paddingStart="@dimen/text_margin"
        android:paddingTop="@dimen/text_margin">

        <!-- Getting Started -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_header_1"
            style="@style/style_text_view_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_body_1_euchre"
            style="@style/style_text_view_body"/>

        <!-- Playing the Game -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_header_2"
            style="@style/style_text_view_header"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_body_2_euchre"
            style="@style/style_text_view_body"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_hint_1_euchre"
            style="@style/style_text_view_sub"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_body_3_euchre"
            style="@style/style_text_view_body"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_hint_2_euchre"
            style="@style/style_text_view_sub"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_body_4_euchre"
            style="@style/style_text_view_body"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_hint_3_euchre"
            style="@style/style_text_view_sub"/>

        <!-- Scoring -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_header_3"
            style="@style/style_text_view_header"/>

        <!-- Winning the Game -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_rules_header_4"
            style="@style/style_text_view_header"/>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>